added redos password

--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,15 @@ QDRANT_BASE_URL=http://qdrant:6333
 # Fix for permission issues on volume mounts
 UID=1000
 GID=1000
+
+
+# Redis Configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=generate-secure-password
+
+# MCP Configuration
+MCP_N8N_API_KEY=your-n8n-api-key
+MCP_AUTH_TOKEN=generate-secure-auth-token
+MCP_PORT=3000
+
