--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,27 @@
 # File Name: docker-compose.yml
 # Description: Docker Compose configuration for the N8N workflow automation platform, including PostgreSQL and Qdrant.
 # Docker Internal Network: jask-internal-net
-# Version: 1.0.0
-# Author: Jask Creative
 
 networks:
   jask-internal-net:
-    # Define the internal network for inter-service communication
     name: jask-internal-net
     external: false
 
 services:
-  # Redis service for N8N
+  # Redis service for N8N (PROTEGIDO CON CONTRASEÑA)
   redis:
     image: redis:7-alpine
     container_name: n8n-redis
     restart: unless-stopped
-    command: redis-server --save 60 1 --loglevel warning
+    command: redis-server --save 60 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    env_file:
+      - .env
     volumes:
       - ./service-data/redis-data:/data
     networks:
       - jask-internal-net
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -33,30 +32,20 @@ services:
     image: postgres:16-alpine
     container_name: n8n-postgres
     restart: unless-stopped
-    # Use the UID/GID from the .env file for volume permissions
     user: "${UID}:${GID}"
-    # Load environment variables from the .env file
     env_file:
       - .env
     environment:
-      # Standardized PostgreSQL environment variables
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-
     volumes:
-      # Persistent storage for PostgreSQL data
       - ./service-data/postgres-data:/var/lib/postgresql/data
-
     ports:
-      # External port for optional external access to the database
       - "${DB_EXTERNAL_PORT}:5432"
-
     networks:
       - jask-internal-net
-      
     healthcheck:
-      # Health check to ensure the database is ready before N8N starts
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 5s
       timeout: 5s
@@ -67,17 +56,13 @@ services:
     image: qdrant/qdrant:latest
     container_name: qdrant
     restart: unless-stopped
-    # Load environment variables from the .env file
     env_file:
       - .env
     environment:
-      # Timezone setting
       - TZ=${TZ}
     ports:
-      # Expose Qdrant REST API and Dashboard
       - "6333:6333"
     volumes:
-      # Persistent storage for Qdrant data
       - ./service-data/qdrant-storage:/qdrant/storage
       - ./service-data/qdrant-snapshots:/qdrant/snapshots
     networks:
@@ -85,36 +70,17 @@ services:
 
   # N8N core service
   n8n:
-    
-    # Build the image from the local Dockerfile
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
-    
-    # Build the image using the latest N8N image from Docker Hub
     image: n8nio/n8n:latest
-
-    # Container name for easy identification
     container_name: n8n
-
-    # Expose the N8N web interface port
     ports:
       - "5678:5678"
-
-    # Always restart the container unless it is explicitly stopped  
     restart: unless-stopped
-
-    # Load environment variables from the .env file
     env_file:
       - .env
-
-    # Environment variables for N8N configuration
     environment:
-      # Timezone and generic timezone settings
       - TZ=${TZ}
       - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
 
-      # Host and proxy settings for N8N
       - N8N_HOST=${N8N_HOST}
       - N8N_PORT=${N8N_PORT}
       - N8N_PROTOCOL=${N8N_PROTOCOL}
@@ -125,40 +91,45 @@ services:
       - N8N_TRUSTED_PROXIES=${N8N_TRUSTED_PROXIES}
       - N8N_SECURE_COOKIE=${N8N_SECURE_COOKIE}
 
-      # Security and compatibility settings
       - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=${N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS}
       - N8N_BLOCK_ENV_ACCESS_IN_NODE=${N8N_BLOCK_ENV_ACCESS_IN_NODE}
       - N8N_GIT_NODE_DISABLE_BARE_REPOS=${N8N_GIT_NODE_DISABLE_BARE_REPOS}
       - N8N_RUNNERS_ENABLED=${N8N_RUNNERS_ENABLED}
-      # - N8N_LOG_LEVEL=${N8N_LOG_LEVEL}
 
-      # Database configuration for N8N (using standardized names)
-      - DB_TYPE=${DB_TYPE} # Define the database type (e.g., postgresdb)
-      - DB_POSTGRESDB_HOST=${DB_HOST} # Postgres host
-      - DB_POSTGRESDB_PORT=${DB_PORT}  # Postgres port
-      - DB_POSTGRESDB_DATABASE=${DB_NAME}  # Postgres database name
-      - DB_POSTGRESDB_USER=${DB_USER} # Postgres user 
-      - DB_POSTGRESDB_PASSWORD=${DB_PASSWORD} # Postgres password
+      # Database config
+      - DB_TYPE=${DB_TYPE}
+      - DB_POSTGRESDB_HOST=${DB_HOST}
+      - DB_POSTGRESDB_PORT=${DB_PORT}
+      - DB_POSTGRESDB_DATABASE=${DB_NAME}
+      - DB_POSTGRESDB_USER=${DB_USER}
+      - DB_POSTGRESDB_PASSWORD=${DB_PASSWORD}
 
-      # Qdrant configuration
+      # Qdrant
       - QDRANT_BASE_URL=${QDRANT_BASE_URL}
-      # - QDRANT_API_KEY=${QDRANT_API_KEY}
 
-      # Redis configuration
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT}
+      # Redis (AHORA CON PASSWORD)
+      - QUEUE_BULL_REDIS_HOST=redis
+      - QUEUE_BULL_REDIS_PORT=6379
+      - QUEUE_BULL_REDIS_PASSWORD=${REDIS_PASSWORD}
+
+      # compatibilidad legacy
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
 
     depends_on:
-      # Wait for the database to be healthy and Qdrant to be started
       postgres:
         condition: service_healthy
       qdrant:
         condition: service_started
+      redis:
+        condition: service_healthy
+
     volumes:
-      # Persistent storage for N8N data, shared files, and backups
       - ./service-data/n8n-data:/home/node/.n8n
       - ./service-data/n8n-shared:/files
       - ./service-data/backups:/home/node/backups
+
     networks:
       - jask-internal-net
 
